--- a/.github/workflows/BuildOpenVisus.CPython.yml
+++ b/.github/workflows/BuildOpenVisus.CPython.yml
@@ -168,3 +168,28 @@ jobs:
              docker push visus/mod_visus:$TAG
              popd
            fi
+  build_aarch64:
+    name: "Wheel ${{ matrix.pyver }} aarch64"
+    strategy:
+      matrix:
+        pyver: [cp36-cp36m]
+        arch: [aarch64]
+      fail-fast: false
+    runs-on: ubuntu-latest
+    env:
+      py: /opt/python/${{ matrix.pyver }}/bin/python
+      img: quay.io/pypa/manylinux2014_${{ matrix.arch }}
+    steps:
+    - name: git clone OpenVisus
+      uses: actions/checkout@v2
+    - name: Set up QEMU
+      id: qemu
+      uses: docker/setup-qemu-action@v1
+    - name: Compiling OpenVisus
+      run: |
+        sudo apt update
+        sudo apt install build-essential
+        docker run -e PYTHON_VERSION=3.6 -e Qt5_DIR=/opt/qt512 -v ${PWD}:${PWD}  -w ${PWD} ab1997/portable-linux-binaries:latest /bin/bash -c "./scripts/build_linux.sh"
+        sudo chown -R root:root  build
+        sudo chmod -R a+rwx      build
+        ls -l build/Release/OpenVisus
