--- a/.github/workflows/BuildOpenVisus.CPython.yml
+++ b/.github/workflows/BuildOpenVisus.CPython.yml
@@ -189,7 +189,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install build-essential
-        export CPPFLAGS="-DPNG_ARM_NEON_OPT=0"
+        sudo apt-get install libpng-dev
         docker run -e PYTHON_VERSION=3.6 -e Qt5_DIR=/opt/qt512 -v ${PWD}:${PWD}  -w ${PWD} ab1997/portable-linux-binaries:latest /bin/bash -c "./scripts/build_linux.sh"
         sudo chown -R root:root  build
         sudo chmod -R a+rwx      build
