--- a/.github/workflows/BuildOpenVisus.CPython.yml
+++ b/.github/workflows/BuildOpenVisus.CPython.yml
@@ -200,7 +200,7 @@ jobs:
           which python && \
           cd build/Release/OpenVisus && \
           export PYTHONPATH=../ && \
-          sudo ldconfig && \
+          ldconfig && \
           python  -m OpenVisus configure  || true && \
           python  -m OpenVisus test && \
           python  -m OpenVisus test-gui && \
